Fix title alignment in related blocks

--- a/source/_assets/sass/_related.scss
+++ b/source/_assets/sass/_related.scss
@@ -60,21 +60,43 @@ section.related {
 		flex-basis: 20%;
 
 		display: flex;
-		flex-wrap: wrap;
 		justify-content: space-between;
 		align-items: center;
 
+		padding-bottom: 0.5em;
+
+		$font-min: 2.125em;
+		$font-max: 2.3em;
+
 		h2 {
-			color: $color-blue;
-			font-size: 2.3em;
-			line-height: 1.25;
-			padding: 0.5em 0 1em;
 			font-family: 'Didact Gothic', sans-serif;
+			font-size: $font-min;
+			line-height: 1.25;
+			color: $color-blue;
+
+			padding: 0.5em 0;
+			padding-right: 0.5em;
+
+			@media #{$mq-smallest} {
+
+				font-size: between( $font-min, $font-max, $bp-smallest, $bp-medium );
+
+			}
+
 		}
 
+
 		@media #{$mq-medium} {
+
 			display: block;
+			flex-wrap: wrap;
 			margin-right: 2em;
+
+			h2 {
+				font-size: $font-max;
+				padding-bottom: 1em;
+				padding-right: 0em;
+			}
 		}
 
 	}
@@ -97,22 +119,22 @@ section.related {
 	}
 
 	.item {
-	    h4 {
-		font-family: 'Didact Gothic', sans-serif;
-		font-size: 1.2em;
-		margin-bottom: 1.25em;
-	    }
+		h4 {
+			font-family: 'Didact Gothic', sans-serif;
+			font-size: 1.2em;
+			margin-bottom: 1.25em;
+		}
 
-	    h5 {
-		font-family: 'Didact Gothic', sans-serif;
-		font-weight: bold;
-		color: #ffffff;
+		h5 {
+			font-family: 'Didact Gothic', sans-serif;
+			font-weight: bold;
+			color: #ffffff;
 
-		font-size: 0.66em;
-		height: 3em;
-		line-height: 1.5;
-		letter-spacing: 0.3em;
-		text-transform: uppercase;
-	    }
+			font-size: 0.66em;
+			height: 3em;
+			line-height: 1.5;
+			letter-spacing: 0.3em;
+			text-transform: uppercase;
+		}
 	}
 }
